--- a/settings.gradle
+++ b/settings.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 include "spring-aop"
-include "spring-aspects"
+//include "spring-aspects"
 include "spring-beans"
 include "spring-context"
 include "spring-context-indexer"
@@ -62,3 +62,5 @@ settings.gradle.projectsLoaded {
 		}
 	}
 }
+include 'demo'
+
