--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 pluginManagement {
 	repositories {
+		maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
 		gradlePluginPortal()
 		maven { url 'https://repo.spring.io/plugins-release' }
 	}
@@ -7,7 +8,7 @@ pluginManagement {
 apply from: "$rootDir/gradle/build-cache-settings.gradle"
 
 include "spring-aop"
-include "spring-aspects"
+//include "spring-aspects"
 include "spring-beans"
 include "spring-context"
 include "spring-context-indexer"
